# multithreaded-generator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: consumer.h  cv_based_threading.h  producer.h  thread_safe_queue.h
src/: consumer.cpp  cv_based_threading.cpp  main.cpp  producer.cpp
tests/: test_thread_safe_queue.cpp
